--- a/example/example.1
+++ b/example/example.1
@@ -36,7 +36,7 @@ item b   Description of item b
 .sp -1
 .IP \(bu 2.3
 .\}
-\(bulistitem1 optional  parameters
+listitem1 optional  parameters
 .sp
 .RS 8
 .ie n \{\
@@ -46,7 +46,7 @@ item b   Description of item b
 .sp -1
 .IP \(bu 2.3
 .\}
-\(bulistitem11
+listitem11
 .RE
 .sp
 .RS 8
@@ -57,7 +57,7 @@ item b   Description of item b
 .sp -1
 .IP \(bu 2.3
 .\}
-\(bulistitem22
+listitem22
 .sp
 .RS 12
 .ie n \{\
@@ -67,7 +67,7 @@ item b   Description of item b
 .sp -1
 .IP \(bu 2.3
 .\}
-\(bu24214 42134 1234 12
+24214 42134 1234 12
 .RE
 .sp
 .RS 12
@@ -78,7 +78,7 @@ item b   Description of item b
 .sp -1
 .IP \(bu 2.3
 .\}
-\(bu2314 21341 24 12
+2314 21341 24 12
 .RE
 .RE
 .RE
@@ -91,7 +91,7 @@ item b   Description of item b
 .sp -1
 .IP \(bu 2.3
 .\}
-\(bulistitem2
+listitem2
 .RE
 .sp
 .RS 4
@@ -102,7 +102,7 @@ item b   Description of item b
 .sp -1
 .IP \(bu 2.3
 .\}
-\(bulistitem3
+listitem3
 .RE
 
 .SH "COMMON OPTIONS"
